--- a/xunit.runners.maui/VisualRunner/MauiVisualRunnerApp.xaml
+++ b/xunit.runners.maui/VisualRunner/MauiVisualRunnerApp.xaml
@@ -1,7 +1,11 @@
-﻿<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="using:Xunit.Runners.Maui.VisualRunner"
-             x:Class="Xunit.Runners.Maui.VisualRunner.MauiVisualRunnerApp">
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<maux:MauxApplication
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:maux="clr-namespace:Maux;assembly=Maux.Mvvm"
+    xmlns:local="using:Xunit.Runners.Maui.VisualRunner"
+    x:Class="Xunit.Runners.Maui.VisualRunner.MauiVisualRunnerApp">
+
     <Application.Resources>
         <ResourceDictionary>
 
@@ -15,4 +19,5 @@
 
         </ResourceDictionary>
     </Application.Resources>
-</Application>
+
+</maux:MauxApplication>
